--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,41 +31,44 @@ header {
 }
 
 .icons {
-    margin-right: 270px;
-    margin-top: 20px;
+    margin-right: 250px;
+    margin-top: 50px;
     padding: 0px;
 }
 
 header h1 {
     color: rgba(255, 255, 255, 0.905);
-    margin-left: 220px;
+    margin-left: 170px;
     padding: 40px;
     font-size: 1.6em;
 }
 
 header img#imgprincipal {
     width: 400px;
+    width: fit-content;
     height: 600px;
     z-index: -1;
     position: absolute;
-    right: 250px;
-    top: 0px;
+    right: 240px;
+    top: 45px;
+    border: 3px solid lightgreen;
+    border-radius: 20px;
 }
 
 
 main article h1 {
-    font-size: 5.9em;
+    font-size: 4.7em;
     text-align: center;
-    margin-right: 340px;
-    margin-top: 120px;
+    margin-right: 540px;
+    margin-top: 100px;
     color: rgba(255, 255, 255, 0.916);
     font-family: 'Barlow', sans-serif;
 }
 
 h2 {
     text-align: center;
-    font-size: 5.4em;
-    margin-right: 390px;
+    font-size: 4.7em;
+    margin-right: 470px;
     color: rgba(255, 255, 255, 0.916);
     font-family: 'Barlow', sans-serif;
 }
@@ -73,7 +76,7 @@ h2 {
 h3 {
     font-size: 1.3em;
     text-align: justify;
-    margin-left: 235px;
+    margin-left: 200px;
     margin-top: 19px;
     padding: 10px;
     color: rgba(255, 255, 255, 0.916);
@@ -81,7 +84,7 @@ h3 {
 }
 
 h4 {
-    margin-left: 230px;
+    margin-left: 190px;
     color: white;
     font-size: 1.5em;
     font-family: 'Barlow', sans-serif;
