--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,6 +51,7 @@ header img#imgprincipal {
     position: absolute;
     right: 240px;
     top: 45px;
+    padding: 0px;
     border: 3px solid lightgreen;
     border-radius: 20px;
 }
