--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,292 +3,248 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 /* font-family: 'Barlow', sans-serif; */
 
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+ * {
+        margin: 0px;
+        padding: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    body {
+    background-color: red;
 }
-
-body {
-    background-color: rgba(0, 0, 0, 0.893);
-}
-
-
-header img {
-    width: 30px;
-    padding-left: 20px;
-}
-
-header img:hover {
-    padding: 2px;
-    background-color: beige;
-    transform: scale(1.2);
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-}
-
-.icons {
-    margin-right: 250px;
-    margin-top: 50px;
+    
+    
+    header img {
+        width: 30px;
+        padding-left: 20px;
+    }
+    
+    header img:hover {
+        padding: 2px;
+        background-color: beige;
+        transform: scale(1.2);
+    }
+    
+    
+    
+    .icons {
+    margin-right: 90px;
+    margin-top: 55px;
     padding: 0px;
 }
-
-header h1 {
+    
+    header h1 {
     color: rgba(255, 255, 255, 0.905);
-    margin-left: 170px;
-    padding: 40px;
-    font-size: 1.6em;
+    text-align: center;
+    padding: 30px;
+    font-size: 1.2em;
 }
-
-header img#imgprincipal {
-    width: 400px;
-    width: fit-content;
-    height: 600px;
+    
+    header img#imgprincipal {
+    width: 320px;
+    height: 320px;
     z-index: -1;
     position: absolute;
-    right: 240px;
-    top: 45px;
+    right: 70px;
+    top: 80px;
     padding: 0px;
     border: 3px solid lightgreen;
-    border-radius: 20px;
+    border-radius: 50%;
 }
-
-
-main article h1 {
-    font-size: 4.7em;
+    
+    
+    main article h1 {
+    font-size: 3.1em;
     text-align: center;
     margin-right: 540px;
     margin-top: 100px;
     color: rgba(255, 255, 255, 0.916);
     font-family: 'Barlow', sans-serif;
+    padding-left: 40px;
 }
-
-h2 {
+    
+    h2 {
     text-align: center;
-    font-size: 4.7em;
-    margin-right: 470px;
+    font-size: 2.9em;
+    margin-right: 490px;
     color: rgba(255, 255, 255, 0.916);
     font-family: 'Barlow', sans-serif;
+    padding-left: 40px;
 }
-
-h3 {
-    font-size: 1.3em;
+    
+    h3 {
+    font-size: 1.1em;
     text-align: justify;
-    margin-left: 200px;
+    margin-left: 75px;
     margin-top: 19px;
-    padding: 10px;
+    padding-left: -10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: rgba(255, 255, 255, 0.916);
     font-family: 'Barlow', sans-serif;
 }
 
 h4 {
-    margin-left: 190px;
+    margin-left: 70px;
     color: white;
-    font-size: 1.5em;
+    font-size: 1.1em;
     font-family: 'Barlow', sans-serif;
     margin-top: 20px;
     padding: 20px;
     color: rgba(255, 255, 255, 0.916);
 }
-
-b.b1 {
-    border-bottom: 5px solid lightgreen ;
-}
-
-b.b2 {
-    border-bottom: 2px solid lightgreen;
-}
-
-b.b3 {
-    border-bottom: 2px solid lightgreen;
-}
-
-hr {
-    width: 1200px;
+    
+    b.b1 {
+        border-bottom: 5px solid lightgreen ;
+    }
+    
+    b.b2 {
+        border-bottom: 2px solid lightgreen;
+    }
+    
+    b.b3 {
+        border-bottom: 2px solid lightgreen;
+    }
+    
+    hr {
+    width: 400px;
     margin: auto;
     margin-top: 170px;
 }
-
-aside div#tabela2 {
-    padding: 30px;
-    color: rgba(255, 255, 255, 0.933);
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-    margin: 60px;
-}
-
-aside div#tabela2 h1 {
-    margin-left: 5px;
+    
+    aside div#tabela2 h1 {
+    margin-left: -80px;
     padding: 50px;
+    font-size: 2.3em;
 }
-
-tr td h1 {
-    font-size: 3.2em;
+    
+    aside div#tabela2 {
+        display: flex;
+        justify-content: space-between;
+        color: rgba(255, 255, 255, 0.855);
+    }
+    
+    #skills h1 {
+    font-size: 2.0em;
     margin-top: 100px;
     text-align: justify;
     margin: 0px;
-    padding-left: 160px;
-    padding-right: 10px;
+    padding-left: 60px;
+    padding-right: 80px;
     padding-top: 90px;
     padding-bottom: 25px;
     color: rgba(255, 255, 255, 0.855);
 }
 
-#tabela1 p {
-    color: rgba(185, 184, 184, 0.942);
-    padding-left: 160px;
-    font-size: 1.1em;
+#skills p {
+    color: rgba(185, 184, 184, 0.942);        
+    padding-left: 70px;
+    font-size: 0.8em;
     font-family: 'Barlow', sans-serif;
 }
-
-aside h1 {
-    font-size: 4.3em;
-    color: rgba(255, 255, 255, 0.919);
-}
-
-aside img {
-    width: 400px;
-    height: 300px;
-    margin: auto;
-    display: block;
-}
-
-div#coluna1 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;    
-    width: 1000px;
-    margin: auto;
-    padding: 20px;
-}
-
-div#coluna2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;    
-    width: 1000px;
-    margin: auto;
-    padding: 20px;
-}
-
-div#coluna3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;    
-    width: 1000px;
-    margin: auto;
-    padding: 20px;
-}
-
-aside div#imagens h1 {
+    
+    aside h1 {
+        font-size: 4.3em;
+        color: rgba(255, 255, 255, 0.919);
+    }
+    
+    aside img {
+        width: 400px;
+        height: 300px;
+        margin: auto;
+        display: block;
+    }
+    
+    aside div#imagens h1 {
     color: rgba(255, 255, 255, 0.93);
-    font-size: 1.7em;
+    font-size: 1.2em;
+    padding-left: 40px;
 }
-
-aside div#imagens p {
-    color: rgba(255, 255, 255, 0.797);
-    font-size: 1.5em;
+    
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.5em;
+    }
+    
+    div#imagens h1 {
+        padding: 10px;
+    }
+    
+    div#imagens p {
+        padding: 10px;
+        color: gray;
+    }
+    
+    #linha2 {
+        width: 490px;
+        height: 280px;
+        margin-left: 20px;
+    }
+    
+    .linha4 {
+    margin-right: 120px;
 }
-
-div#imagens h1 {
-    padding: 10px;
+    
+    .linha5 {
+        margin-right: 50px;
+    }
+    
+    .linha6 {
+    margin-left: -10px;
 }
-
-div#imagens p {
-    padding: 10px;
-    color: gray;
-}
-
-#linha2 {
-    width: 590px;
-    height: 280px;
-    margin-left: 20px;
-}
-
-.linha4 {
-    margin-left: 120px;
-}
-
-.linha5 {
-    margin-right: 50px;
-}
-
-.linha6 {
-    margin-left: 70px;
-}
-
-#linha4 {
-    height: 280px;
-}
-
-#linha3 {
-    height: 280px;
-}
-
-footer {
-    background-color: rgb(48, 47, 47);
-    padding: 110px 150px 0px 150px;
-    margin-top: 150px;
-}
-
-footer h1 {
+    
+    #linha4 {
+        height: 280px;
+    }
+    
+    
+    #linha3 {
+        height: 280px;
+    }
+    
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 110px 150px 0px 150px;
+        margin-top: 150px;
+    }
+    
+    footer h1 {
     color: rgba(247, 247, 247, 0.966);
-    font-size: 4.3em;
-    margin-left: 15px;
+    font-size: 3.3em;
+    margin-left: 5px;
     font-family: 'Barlow', sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 footer p {
     color: rgba(255, 255, 255, 0.907);
     text-align: justify;
-    font-size:  1.5em;
+    font-size:  1.0em;
     font-family: 'Barlow', sans-serif;
+    margin-left: -10px;
     padding: 20px;
 }
-
-footer h2 {
-    color: rgba(128, 128, 128, 0.941);
-    font-size: 1.8em;
-}
-
-#geral {
-    display: flex;
-}
-
-input {
-    height: 0px;
-    background-color: rgba(255, 0, 0, 0);
+    
+    footer h2 {
+        color: rgba(128, 128, 128, 0.941);
+        font-size: 1.8em;
+    }
+    
+    .footer img{
+        padding: 10px;
+        width: 30px;
+    }
+    
+    .imagens img {
+    width: 20px;
     padding: 50px;
-    border: 0px;
-    border-bottom: 2px solid white;
-    margin-left: 310px;
-    margin-bottom: 20px;
-}
-
-.footer img{
-    padding: 10px;
-    width: 30px;
-}
-
-.imagens{
-    justify-content: left;
-}
-
-.imagens img {
-    width: 30px;
-    padding: 50px;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: 20px;
 }
-
-.footer .imgextra {
+    
+    .footer .imgextra {
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
-    margin-left: 230px;
-}
+    width: 200px;
+    height: 200px;
+    
+} 
