--- a/mq.style.css
+++ b/mq.style.css
@@ -41,6 +41,8 @@
         margin-top: 0px;
         border: 2px solid lightgreen;
         border-radius: 20px;
+        right: 240px;
+        top: 45px;
     }
 
     header h1 {
